Chnage config AWS Backend